<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/Home"
            android:icon="@drawable/ic_home_black_24dp"
            android:checked="false"
            android:title="@string/title_home" />

        <item
            android:id="@+id/Mailbox"
            android:icon="@drawable/ic_mail_black_24dp"
            android:checked="false"
            android:title="@string/title_Mailbox" />

        <item
            android:id="@+id/Notification"
            android:icon="@drawable/ic_search_black_24dp"
            android:checked="false"
            android:title="@string/Notification" />

        <item
            android:id="@+id/Search"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:checked="false"
            android:title="@string/Search" />

        <item
            android:id="@+id/Menu"
            android:icon="@drawable/ic_menu_black_24dp"
            android:checked="false"
            android:title="@string/Menu" />

    </group>

</menu>