<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tablayout">

    <include layout="@layout/viewpager"/>
    <android.support.design.widget.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        app:tabGravity="fill"
        android:background="@color/colorPrimary"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextColor="@android:color/black">

        <android.support.design.widget.TabItem
            android:id="@+id/tab_matches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Matches"/>

        <android.support.design.widget.TabItem
            android:id="@+id/tab_newmatches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/New_matches"
            android:background="@color/colorAccent"/>

        <android.support.design.widget.TabItem
            android:id="@+id/premium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Premium_Members" />
    </android.support.design.widget.TabLayout>
</RelativeLayout>